ocfweb/hedgedoc_Deployment_ocfweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: hedgedoc
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: hedgedoc
    spec:
      containers:
      - env:
        - name: PUPPET_CERT_DIR
          value: /etc/ocfweb
        - name: OCFWEB_TESTING
          value: '0'
        - name: OCFWEB_PROD_VERSION
          value: f9141fa5b7822175765056d13aa88b9c3790d804
        image: docker.ocf.berkeley.edu/ocfweb-web-deployment:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            httpHeaders:
            - name: Host
              value: www.ocf.berkeley.edu
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 3
        name: main
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            httpHeaders:
            - name: Host
              value: www.ocf.berkeley.edu
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - mountPath: /etc/ocf
          name: etc
        - mountPath: /etc/ocfweb
          name: secrets
      - args:
        - /etc/ocf
        image: harbor.ocf.berkeley.edu/ocf/etc/sync:4c3eb1f6ba456ec30a2fbf21423364eaf0ae40bd
        name: sync-etc
        volumeMounts:
        - mountPath: /etc/ocf
          name: etc
      volumes:
      - emptyDir: {}
        name: etc
      - name: secrets
        secret:
          secretName: ocfweb
