ocfweb/ocfweb-static_Deployment_ocfweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocfweb-static
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: ocfweb-static
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: ocfweb-static
    spec:
      containers:
      - env:
        - name: PUPPET_CERT_DIR
          value: /etc/ocfweb
        - name: OCFWEB_TESTING
          value: '0'
        - name: OCFWEB_PROD_VERSION
          value: bde28e45ec2c9323b64505296878391870a0605d
        image: ghcr.io/ocf/ocfweb-static:bde28e45ec2c9323b64505296878391870a0605d
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            httpHeaders:
            - name: Host
              value: www.ocf.berkeley.edu
            path: /js/site.js
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 3
        name: main
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            httpHeaders:
            - name: Host
              value: www.ocf.berkeley.edu
            path: /js/site.js
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - mountPath: /etc/ocf
          name: etc
        - mountPath: /etc/ocfweb
          name: secrets
      - args:
        - /etc/ocf
        - --repeat-delay
        - '60'
        image: ghcr.io/ocf/etc-sync:0407f4c3b294910e4f0361745ed7d508b64ffda9
        name: sync-etc
        volumeMounts:
        - mountPath: /etc/ocf
          name: etc
      dnsConfig:
        searches:
        - ocf.berkeley.edu
      dnsPolicy: ClusterFirst
      volumes:
      - emptyDir: {}
        name: etc
      - name: secrets
        secret:
          secretName: ocfweb
