ocfweb/ocfweb_Service_ocfweb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocfweb
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    transpire.ocf.io/deployment: ocfweb
