ocfweb/ocfweb-static_Ingress_ocfweb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: ocfweb-static
spec:
  ingressClassName: cilium
  rules:
  - host: static.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: ocfweb-static
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - static.ocf.berkeley.edu
    secretName: ocfweb-static-tls
