ocfweb/ocfweb_Ingress_ocfweb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.cilium.io/force-https: disabled
    ingress.kubernetes.io/force-ssl-redirect: 'false'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: ocfweb
spec:
  ingressClassName: cilium
  rules:
  - host: www.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: ocfweb
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.ocf.berkeley.edu
    secretName: ocfweb-tls
